--- a/cli/PasswordGenerator.Core/PasswordGenerator.Core.csproj
+++ b/cli/PasswordGenerator.Core/PasswordGenerator.Core.csproj
@@ -1,9 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
-    <LangVersion>8.0</LangVersion>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <Nullable>enable</Nullable>
     <Version>0.0.1</Version>
   </PropertyGroup>
@@ -11,10 +9,7 @@
   <PropertyGroup>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <WarningsAsErrors />
+    <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\PasswordGenerator.Core.xml</DocumentationFile>
   </PropertyGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\PasswordGenerator.Core\PasswordGenerator.Core.csproj" />
-  </ItemGroup>
 
 </Project>
