--- a/cli/PasswordGenerator.Core/PasswordGenerator.Core.csproj
+++ b/cli/PasswordGenerator.Core/PasswordGenerator.Core.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <LangVersion>8.0</LangVersion>
     <Nullable>enable</Nullable>
     <Version>0.0.1</Version>
   </PropertyGroup>
