--- a/web/package.json
+++ b/web/package.json
@@ -8,7 +8,7 @@
     },
     "scripts": {
         "build-dev": "./node_modules/.bin/tsc && ./node_modules/.bin/webpack --mode development",
-        "build": "./node_modules/.bin/tsc && ./node_modules/.bin/webpack --mode production"
+        "build-prod": "./node_modules/.bin/tsc && ./node_modules/.bin/webpack --mode production"
     },
     "author": "Sebastien ROBERT",
     "license": "MIT",
