--- a/web/package.json
+++ b/web/package.json
@@ -14,11 +14,11 @@
     "author": "Sebastien ROBERT",
     "license": "MIT",
     "devDependencies": {
-        "copy-webpack-plugin": "^5.1.1",
+        "copy-webpack-plugin": "7.0.0",
         "git-revision-webpack-plugin": "^3.0.4",
-        "ts-loader": "^6.2.0",
-        "typescript": "^3.6.4",
-        "webpack": "^4.41.2",
-        "webpack-cli": "^3.3.9"
+        "ts-loader": "8.0.14",
+        "typescript": "4.1.3",
+        "webpack": "5.17.0",
+        "webpack-cli": "4.4.0"
     }
 }
