--- a/web/package.json
+++ b/web/package.json
@@ -13,11 +13,11 @@
     "author": "Sebastien ROBERT",
     "license": "MIT",
     "devDependencies": {
-        "copy-webpack-plugin": "7.0.0",
-        "git-revision-webpack-plugin": "^3.0.4",
-        "ts-loader": "8.0.14",
-        "typescript": "4.1.3",
-        "webpack": "5.17.0",
-        "webpack-cli": "4.4.0"
+        "copy-webpack-plugin": "11.0.0",
+        "git-revision-webpack-plugin": "5.0.0",
+        "ts-loader": "9.4.1",
+        "typescript": "4.8.3",
+        "webpack": "5.74.0",
+        "webpack-cli": "4.10.0"
     }
 }
