--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "devDependencies": {
         "copy-webpack-plugin": "11.0.0",
         "git-revision-webpack-plugin": "5.0.0",
+        "remove-files-webpack-plugin": "^1.5.0",
         "ts-loader": "9.4.1",
         "typescript": "4.8.3",
         "webpack": "5.76.0",
