--- a/web/package.json
+++ b/web/package.json
@@ -18,7 +18,7 @@
         "remove-files-webpack-plugin": "^1.5.0",
         "ts-loader": "9.4.1",
         "typescript": "4.8.3",
-        "webpack": "5.76.0",
+        "webpack": "^5.95.0",
         "webpack-cli": "4.10.0"
     }
 }
